--- a/page.html
+++ b/page.html
@@ -8,7 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
 </head>
 <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <div class="cont">
+        <h2 class="ml15">
+            <span class="word">Welcome</span>
+            <span class="word">--You!</span>
+        </h2>
         <div class="form sign-in">
             <h2>Sign In</h2>
             <label>
