Arranged File in Particular Order and all must follow it

--- a/HTML/page.html
+++ b/HTML/page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome To ______________, Please LogIn or SignUp</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -64,5 +64,5 @@
             </div>
         </div>
     </div>
-<script type="text/javascript" src="index.js"></script>
+<script type="text/javascript" src="/JS/index.js"></script>
 </body>
