--- a/front_intrect.html
+++ b/front_intrect.html
@@ -21,11 +21,18 @@
                 Platefrom 
             </h1>
         </div>
-        <div class="icon">
-            <a href="#"><i class="fa fa-fw fa-home"></i> Home</a>
-            <a href="#"><i class="fa fa-fw fa-search"></i> About us</a>
-            <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
-            <a href="page.html"> Apply</a>
+        <div class="button">
+            <button class="btn" type="button">Home</button>
+            <button class="btn" type="button">About us</button>
+            <button class="btn" type="button">Contect us</button>
+            <input type="text" placeholder="Search..">
+            <button class="log" type="button"><a href="page.html">Sign in</a></button>
+        </div>
+        <div class="block1">
+            <img src="anmol.jpeg" alt="info" width="260" height="250"/>
+        </div>
+        <div class="text_block">
+            <p>......................................................</p>
         </div>
     </div>
 </body>
