--- a/HTML/About.html
+++ b/HTML/About.html
@@ -44,39 +44,11 @@
                 </div>
             </div>  
         </nav>
-        <div class="cards">
-            <ui>
-                <li class="card">
-                    <a href="">
-                        <h2>Class-V <br> (5th)</h2>
-                    </a>
-                </li>
-                <li class="card">
-                    <a href="">
-                        <h2>Class-VI <br> (6th)</h2>
-                    </a>
-                </li>
-                <li class="card">
-                    <a href="">
-                        <h2>Class-VII <br> (7th)</h2>
-                    </a>
-                </li>
-                <li class="card">
-                    <a href="">
-                        <h2>Class-VIII <br> (8th)</h2>
-                    </a>
-                </li>
-                <li class="card">
-                    <a href="">
-                        <h2>Class-IX <br> (9th)</h2>
-                    </a>
-                </li>
-                <li class="card">
-                    <a href="">
-                        <h2>Class-X <br> (10th)</h2>
-                    </a>
-                </li>
-            </ui>
+        <div class="inte">
+            <h2>Thank You</h2>
+            <p>
+                For visit the site the site is cteated 5th to 12th student perpose
+            </p>
         </div>
     </header>
 </body>
