--- a/HTML/contect.html
+++ b/HTML/contect.html
@@ -44,39 +44,25 @@
                 </div>
             </div>  
         </nav>
-        <div class="cards">
-            <ui>
-                <li class="card">
-                    <a href="">
-                        <h2>Class-V <br> (5th)</h2>
-                    </a>
-                </li>
-                <li class="card">
-                    <a href="">
-                        <h2>Class-VI <br> (6th)</h2>
-                    </a>
-                </li>
-                <li class="card">
-                    <a href="">
-                        <h2>Class-VII <br> (7th)</h2>
-                    </a>
-                </li>
-                <li class="card">
-                    <a href="">
-                        <h2>Class-VIII <br> (8th)</h2>
-                    </a>
-                </li>
-                <li class="card">
-                    <a href="">
-                        <h2>Class-IX <br> (9th)</h2>
-                    </a>
-                </li>
-                <li class="card">
-                    <a href="">
-                        <h2>Class-X <br> (10th)</h2>
-                    </a>
-                </li>
-            </ui>
+        <div class="info">
+            <div class="box">
+                <img src="../Images/anmol.png" alt="creator photo">
+				<h2>Anmol Tiwari</h2>
+                <p>Completed MCA in Gwalior <br> Contect No: <br> 7078723164 </p>
+                <a href=""><img src="../Images/Splash-Instagraam-Icon-Png-715x715.png"><p>Instagram</p></a>
+            </div>
+            <div class="box">
+                <img src="../Images/lalit.png" alt="creator photo">
+				<h2>Lalit Kumar Singh</h2>
+                <p>Completed MCA in Gwalior <br> Contect No: <br> 8279445853 </p>
+                <a href=""><img src="../Images/Splash-Instagraam-Icon-Png-715x715.png"><p>Instagram</p></a>
+            </div>
+            <div class="box">
+                <img src="../Images/mukul.png" alt="creator photo">
+				<h2>Mukul Goel</h2>
+                <p>Completed MCA in Gwalior <br> Contect No: <br> 7007436539 </p>
+                <a href=""><img src="../Images/Splash-Instagraam-Icon-Png-715x715.png"><p>Instagram</p></a>
+			</div>
         </div>
     </header>
 </body>
