--- a/HTML/main.html
+++ b/HTML/main.html
@@ -22,14 +22,14 @@
                     </ui>
                     <div class="option">
                         <ui>
-                            <li><a href="">Class-V</a></li>
-                            <li><a href="">Class-VI</a></li>
-                            <li><a href="">Class-VII</a></li>
-                            <li><a href="">Class-VIII</a></li>
-                            <li><a href="">Class-IX</a></li>
-                            <li><a href="">Class-X</a></li>
-                            <li><a href="">Class-XI</a></li>
-                            <li><a href="">Class-XII</a></li>
+                            <li><a href="data.html">Class-V</a></li>
+                            <li><a href="data.html">Class-VI</a></li>
+                            <li><a href="data.html">Class-VII</a></li>
+                            <li><a href="data.html">Class-VIII</a></li>
+                            <li><a href="data.html">Class-IX</a></li>
+                            <li><a href="data.html">Class-X</a></li>
+                            <li><a href="data.html">Class-XI</a></li>
+                            <li><a href="data.html">Class-XII</a></li>
                         </ui>
                     </div>
                 </div>
@@ -39,7 +39,6 @@
                         <li><a href="About.html">About us</a></li>
                         <li><a href="contect.html">Contect us</a></li>
                         <li><a href="page.html">Sign in</a></li>
-                        <input type="text" placeholder="Search..">
                     </ui>
                 </div>
             </div>  
@@ -47,32 +46,32 @@
         <div class="cards">
             <ui>
                 <li class="card">
-                    <a href="">
+                    <a href="data.html">
                         <h2>Class-V <br> (5th)</h2>
                     </a>
                 </li>
                 <li class="card">
-                    <a href="">
+                    <a href="data.html">
                         <h2>Class-VI <br> (6th)</h2>
                     </a>
                 </li>
                 <li class="card">
-                    <a href="">
+                    <a href="data.html">
                         <h2>Class-VII <br> (7th)</h2>
                     </a>
                 </li>
                 <li class="card">
-                    <a href="">
+                    <a href="data.html">
                         <h2>Class-VIII <br> (8th)</h2>
                     </a>
                 </li>
                 <li class="card">
-                    <a href="">
+                    <a href="data.html">
                         <h2>Class-IX <br> (9th)</h2>
                     </a>
                 </li>
                 <li class="card">
-                    <a href="">
+                    <a href="data.html">
                         <h2>Class-X <br> (10th)</h2>
                     </a>
                 </li>
