--- a/HTML/data.html
+++ b/HTML/data.html
@@ -43,25 +43,25 @@
                 </div>
             </div>  
         </nav>
-        <div class="info">
-            <div class="box">
-                <img src="../Images/anmol.png" alt="creator photo">
-				<h2>Anmol Tiwari</h2>
-                <p>Completed MCA in Gwalior <br> anmoltiwari164@gmail.com <br> Contect No: <br> 7078723164 </p>
-                <a href=""><img src="../Images/Splash-Instagraam-Icon-Png-715x715.png"><p>Instagram</p></a>
-            </div>
-            <div class="box">
-                <img src="../Images/lalit.png" alt="creator photo">
-				<h2>Lalit Kumar Singh</h2>
-                <p>Completed MCA in Gwalior <br> lalitthakur231996@gmail.com <br> Contect No: <br> 8279445853 </p>
-                <a href=""><img src="../Images/Splash-Instagraam-Icon-Png-715x715.png"><p>Instagram</p></a>
-            </div>
-            <div class="box">
-                <img src="../Images/mukul.png" alt="creator photo">
-				<h2>Mukul Goel</h2>
-                <p>Completed MCA in Gwalior <br> mukulgoel1998@outlook.com <br> Contect No: <br> 7007436539 </p>
-                <a href=""><img src="../Images/Splash-Instagraam-Icon-Png-715x715.png"><p>Instagram</p></a>
-			</div>
+        <div class="section">
+            <ui>
+                <li class="home">
+                    <h2>Books</h2>
+                    <div class="bord"></div>
+                    <div class="links"></div>
+                </li>
+                <li class="home">
+                    <h2>Notes</h2>
+                    <div class="bord"></div>
+                    <div class="links"></div>
+                </li>
+                <li class="home">
+                    <h2>Videos</h2>
+                    <div class="bord"></div>
+                    <div class="links"></div>
+                </li>
+                
+            </ui>
         </div>
     </header>
 </body>
