--- a/HTML/main.html
+++ b/HTML/main.html
@@ -46,34 +46,46 @@
         <div class="cards">
             <ui>
                 <li class="card">
-                    <a href="data.html">
-                        <h2>Class-V <br> (5th)</h2>
-                    </a>
+                    <form id="phpmain" method="POST" action="phpmain.php">
+                        <a href="data.html">
+                            <h2>Class-V <br> (5th)</h2>
+                        </a>
+                    </form>
                 </li>
                 <li class="card">
-                    <a href="data.html">
-                        <h2>Class-VI <br> (6th)</h2>
-                    </a>
+                    <form id="phpmain" method="POST" action="phpmain.php"></form>
+                        <a href="data.html">
+                            <h2>Class-VI <br> (6th)</h2>
+                        </a>
+                    </form>
                 </li>
                 <li class="card">
-                    <a href="data.html">
-                        <h2>Class-VII <br> (7th)</h2>
-                    </a>
+                    <form id="phpmain" method="POST" action="phpmain.php"></form>
+                        <a href="data.html">
+                            <h2>Class-VII <br> (7th)</h2>
+                        </a>
+                    </form>
                 </li>
                 <li class="card">
-                    <a href="data.html">
-                        <h2>Class-VIII <br> (8th)</h2>
-                    </a>
+                    <form id="phpmain" method="POST" action="phpmain.php"></form>
+                        <a href="data.html">
+                            <h2>Class-VIII <br> (8th)</h2>
+                        </a>
+                    </form>
                 </li>
                 <li class="card">
-                    <a href="data.html">
-                        <h2>Class-IX <br> (9th)</h2>
-                    </a>
+                    <form id="phpmain" method="POST" action="phpmain.php"></form>
+                        <a href="data.html">
+                            <h2>Class-IX <br> (9th)</h2>
+                        </a>
+                    </form>
                 </li>
                 <li class="card">
-                    <a href="data.html">
-                        <h2>Class-X <br> (10th)</h2>
-                    </a>
+                    <form id="phpmain" method="POST" action="phpmain.php"></form>
+                        <a href="data.html">
+                            <h2>Class-X <br> (10th)</h2>
+                        </a>
+                    </form>
                 </li>
             </ui>
         </div>
