--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -47,13 +47,13 @@
             <div class="box">
                 <img src="../Images/anmol.png" alt="creator photo">
 				<h2>Anmol Tiwari</h2>
-                <p>Completed MCA in Gwalior <br> anmoltiwari164@gmail.com <br> Contect No: <br> 7078723164 </p>
+                <p>Completed MCA in Gwalior <br> anmoltiwari164@gmail.com <br> Contact No: <br> 7078723164 </p>
                 <a href=""><img src="../Images/Splash-Instagraam-Icon-Png-715x715.png"><p>Instagram</p></a>
             </div>
             <div class="box">
                 <img src="../Images/lalit.png" alt="creator photo">
 				<h2>Lalit Kumar Singh</h2>
-                <p>Completed MCA in Gwalior <br> lalitthakur231996@gmail.com <br> Contect No: <br> 8279445853 </p>
+                <p>Completed MCA in Gwalior <br> lalitthakur231996@gmail.com <br> Contact No: <br> 8279445853 </p>
                 <a href=""><img src="../Images/Splash-Instagraam-Icon-Png-715x715.png"><p>Instagram</p></a>
             </div>
             <div class="box">
