--- a/HTML/main.html
+++ b/HTML/main.html
@@ -12,7 +12,7 @@
             <div class="logo">
                 <img src="../Images/text836.png" alt="logo">
                 <p class="capt">
-                    -Learning <br>Plateform
+                    -Learning <br>Platform
                 </p>
             </div>
             <div class="btns">
@@ -37,7 +37,7 @@
                     <ui>
                         <li><a href="main.html">Home</a></li>
                         <li><a href="About.html">About us</a></li>
-                        <li><a href="contect.html">Contect us</a></li>
+                        <li><a href="contact.html">Contact us</a></li>
                         <li><a href="page.html">Sign in</a></li>
                     </ui>
                 </div>
